# pyspark-chainer

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
examples/: pipline.py  transformations.py
pyspark_chainer/: __init__.py  chain.py
tests/: test_pyspark_chainer.py
